prevent horizontal overflow

--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -69,6 +69,7 @@ img {
 html {
 
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
 }
 
